# telegram-price-bot

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bot.py  codecov.yaml  config.py  coverage.xml  database.py  diagnostics.py  junit.xml  menu_system.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.sh
.github/workflows/: CI.yml  tests.yml
shared/: menu_builder.py  menu_system.py  pagination.py
shared/menu/: README.md  manager.py  models.py  renderer.py
shared/menu/keyboards/: __init__.py  crud.py  pagination.py
src/: config.py  core_handlers.py  database.py  main.py  menu_system.py  middlewares.py  session.py
src/bot/: __init__.py  bot.py  dispatcher.py  menus.py
src/bot/handlers/: __init__.py  group_handlers.py  mailing_handlers.py  menu_handlers.py  template_handlers.py
src/database/: __init__.py  crud.py  database.py  session.py
src/features/: __init__.py
src/features/groups/: handlers.py
src/features/mailing/: handlers.py
src/features/templates/: __init__.py  constants.py  handlers.py  keyboards.py  menus.py  models.py  services.py
src/handlers/: README.md  __init__.py  base.py  commands.py  groups.py  mailing.py  menu_navigation.py  templates.py
src/menu/: README.md  __init__.py  manager.py  models.py  paginator.py  renderer.py
src/menu/keyboards/: base.py  confirmation.py  paginated.py
src/services/: __init__.py  bot.py  group.py  mailing.py  system.py  template.py
src/shared/: keyboard_utils.py
tests/: TESTING.md  conftest.py  e2e.py  test_bot.py  test_config.py  test_database.py  test_integration.py  test_mailing.py  test_menu_system.py
